internal/gatewayapi/testdata/securitypolicy-no-status-for-unknown-gateway-or-route.out.yaml
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: target-unknown-httproute
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: unknown-httproute
      namespace: envoy-gateway
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: target-unknown-gateway
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: unknown-gateway
      namespace: envoy-gateway
infraIR:
xdsIR:
